--- a/xaml/Views/MainWindow.xaml
+++ b/xaml/Views/MainWindow.xaml
@@ -10,6 +10,7 @@ Height="750" Width="1100"
 MinHeight="600" 
 MinWidth="900" 
 Topmost="False"  
+FontFamily="Arial"
 ShowInTaskbar = "True" 
 TextOptions.TextFormattingMode="Ideal"
 TextOptions.TextRenderingMode="Auto"
