--- a/xaml/Controls/Tabs.xaml
+++ b/xaml/Controls/Tabs.xaml
@@ -199,14 +199,65 @@
                             HorizontalAlignment="Center" 
                             Visibility="Collapsed"
                             Width="auto">
-                            <ComboBoxItem Content="{Binding all, TargetNullValue=All}"/>
-                            <ComboBoxItem Tag="Privacy" Content="{Binding privacy, TargetNullValue=Privacy}"/>
-                            <ComboBoxItem Tag="Fixer" Content="{Binding fixer, TargetNullValue=Fixer}"/>
-                            <ComboBoxItem Tag="Performance" Content="{Binding performance, TargetNullValue=Performance}"/>
-                            <ComboBoxItem Tag="Personalization" Content="{Binding personalization, TargetNullValue=Personalization}"/>
-                            <ComboBoxItem Tag="Power" Content="{Binding power, TargetNullValue=Power}"/>
-                            <ComboBoxItem Tag="Protection" Content="{Binding protection, TargetNullValue=Protection}"/>
-                            <ComboBoxItem Tag="Classic" Content="{Binding classic, TargetNullValue=Classic}"/>
+
+                              <ComboBoxItem Tag="all">
+                                    <TextBlock>
+                                        <Run Text="🏷 "/>
+                                        <Run Text="{Binding all, TargetNullValue=All}"/>
+                                    </TextBlock>
+                                </ComboBoxItem>
+                                
+                                
+                              <ComboBoxItem Tag="Privacy">
+                                    <TextBlock>
+                                        <Run Text="🔒 "/>
+                                        <Run Text="{Binding privacy, TargetNullValue=Privacy}"/>
+                                    </TextBlock>
+                                </ComboBoxItem>
+                            
+
+                              <ComboBoxItem Tag="Fixer">
+                                    <TextBlock>
+                                        <Run Text="🔧 "/>
+                                        <Run Text="{Binding fixer, TargetNullValue=Fixer}"/>
+                                    </TextBlock>
+                                </ComboBoxItem>
+
+                              <ComboBoxItem Tag="Performance">
+                                    <TextBlock>
+                                        <Run Text="⚡ "/>
+                                        <Run Text="{Binding performance, TargetNullValue=Performance}"/>
+                                    </TextBlock>
+                                </ComboBoxItem>
+
+                              <ComboBoxItem Tag="Personalization">
+                                    <TextBlock>
+                                        <Run Text="🎨 "/>
+                                        <Run Text="{Binding personalization, TargetNullValue=Personalization}"/>
+                                    </TextBlock>
+                                </ComboBoxItem>
+
+                            <ComboBoxItem Tag="Power">
+                                    <TextBlock>
+                                        <Run Text="🔋 "/>
+                                        <Run Text="{Binding power, TargetNullValue=Power}"/>
+                                    </TextBlock>
+                                </ComboBoxItem>
+
+                            <ComboBoxItem Tag="Protection">
+                                    <TextBlock>
+                                        <Run Text="🛡 "/>
+                                        <Run Text="{Binding protection, TargetNullValue=Protection}"/>
+                                    </TextBlock>
+                                </ComboBoxItem>
+
+                              <ComboBoxItem Tag="Classic">
+                                    <TextBlock>
+                                        <Run Text="🕰 "/>
+                                        <Run Text="{Binding classic, TargetNullValue=Classic}"/>
+                                    </TextBlock>
+                                </ComboBoxItem>
+
                         </ComboBox>
                     <!--End TwaeksCategory-->
 
