--- a/xaml/Controls/Tabs.xaml
+++ b/xaml/Controls/Tabs.xaml
@@ -31,119 +31,119 @@
                                 Width="auto">
 
                                 <ComboBoxItem Tag="All">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🏷 "/>
                                         <Run Text="{Binding all, TargetNullValue=All}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Web Browsers">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🌐 "/>
                                         <Run Text="{Binding web_browsers, TargetNullValue=Web Browsers}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Media">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🎬 "/>
                                         <Run Text="{Binding media, TargetNullValue=Media}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Media Tools">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🎚 "/>
                                         <Run Text="{Binding media_tools, TargetNullValue=Media Tools}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Documents">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="📃 "/>
                                         <Run Text="{Binding documents, TargetNullValue=Documents}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Compression">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="📀 "/>
                                         <Run Text="{Binding compression, TargetNullValue=Compression}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Communication">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="📞 "/>
                                         <Run Text="{Binding communication, TargetNullValue=Communication}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="File Sharing">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="📁 "/>
                                         <Run Text="{Binding file_sharing, TargetNullValue=File Sharing}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Imaging">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="📷 "/>
                                         <Run Text="{Binding imaging, TargetNullValue=Imaging}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Gaming">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🎮 "/>
                                         <Run Text="{Binding gaming, TargetNullValue=Gaming}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Utilities">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🔨 "/>
                                         <Run Text="{Binding utilities, TargetNullValue=Utilities}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Disk Tools">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="💽"/>
                                         <Run Text="{Binding disk_tools, TargetNullValue=Disk Tools}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Development">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="👩‍💻 "/>
                                         <Run Text="{Binding development, TargetNullValue=Development}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Security">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🛡 "/>
                                         <Run Text="{Binding security, TargetNullValue=Security}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Portable">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="💼 "/>
                                         <Run Text="{Binding portable, TargetNullValue=Portable}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Runtimes">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="📈 "/>
                                         <Run Text="{Binding runtimes, TargetNullValue=Runtimes}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                                 <ComboBoxItem Tag="Drivers">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🔌 "/>
                                         <Run Text="{Binding drivers, TargetNullValue=Drivers}"/>
                                     </TextBlock>
@@ -201,7 +201,7 @@
                             Width="auto">
 
                               <ComboBoxItem Tag="all">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🏷 "/>
                                         <Run Text="{Binding all, TargetNullValue=All}"/>
                                     </TextBlock>
@@ -209,7 +209,7 @@
                                 
                                 
                               <ComboBoxItem Tag="Privacy">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🔒 "/>
                                         <Run Text="{Binding privacy, TargetNullValue=Privacy}"/>
                                     </TextBlock>
@@ -217,42 +217,42 @@
                             
 
                               <ComboBoxItem Tag="Fixer">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🔧 "/>
                                         <Run Text="{Binding fixer, TargetNullValue=Fixer}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                               <ComboBoxItem Tag="Performance">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="⚡ "/>
                                         <Run Text="{Binding performance, TargetNullValue=Performance}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                               <ComboBoxItem Tag="Personalization">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🎨 "/>
                                         <Run Text="{Binding personalization, TargetNullValue=Personalization}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                             <ComboBoxItem Tag="Power">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🔋 "/>
                                         <Run Text="{Binding power, TargetNullValue=Power}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                             <ComboBoxItem Tag="Protection">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🛡 "/>
                                         <Run Text="{Binding protection, TargetNullValue=Protection}"/>
                                     </TextBlock>
                                 </ComboBoxItem>
 
                               <ComboBoxItem Tag="Classic">
-                                    <TextBlock>
+                                    <TextBlock Foreground="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}, Path=Foreground}">
                                         <Run Text="🕰 "/>
                                         <Run Text="{Binding classic, TargetNullValue=Classic}"/>
                                     </TextBlock>
